Changes in component

--- a/src/app/features/components/view-data/view-data.component.html
+++ b/src/app/features/components/view-data/view-data.component.html
@@ -74,3 +74,34 @@
         </div>
     </div>
 </div>
+<!-- <div class="container-fluid">
+    <div class="row p-3">
+        <div class="col-lg-12 border rounded">
+            <div class="d-flex justify-content-between">
+                <h2 class="h2 text-center fw-bold mt-1">List of Image</h2>
+            </div>
+            <hr>
+            <table class="table table-hover table-striped">
+                <thead class="table table-dark">
+                    <tr>
+                        <th>Id</th>
+                        <th>Title</th>
+                        <th>Date</th>
+                        <th>Image</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let data of imagesDatas;let i=index">
+                        <td>{{i+1}}</td>
+                        <td>{{data?.title}}</td>
+                        <td>{{data?.date}}</td>
+                        <td>
+                            <img src="http://localhost:270017/postImages/" {{data?.profile}} alt="image" height="90px"
+                                width="90px">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div> -->
