--- a/src/app/features/components/view-data/view-data.component.html
+++ b/src/app/features/components/view-data/view-data.component.html
@@ -9,7 +9,7 @@
             <table class="table table-hover table-striped">
                 <thead class="table table-dark">
                     <tr>
-                        <th scope="col">#</th>
+                        <th scope="col">No</th>
                         <th scope="col">Surname</th>
                         <th scope="col">Name</th>
                         <th scope="col">Gender</th>
@@ -52,6 +52,9 @@
                             <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal"
                                 (click)="onSendId(data?.id)">Delete</button>
                         </td>
+                    </tr>
+                    <tr *ngIf="!userDatas.length">
+                        <td class="text-center text-danger" colspan="15">No recored found</td>
                     </tr>
                 </tbody>
             </table>
